# banco_imobiliario

./: .gitignore  makefile  pyproject.toml
banco_imb/: __init__.py  app.py  database_models.py  db.py  error_classes.py  op_in_json_files.py
banco_imb/templates/: index.html  jogo.html  jogo.html.old2  novo_jogo.html
src/: app.py
src/templates/: base.html  jogo.html
tests/: test_banco_imb.py  test_db.py
