[tool.poetry]
name = "banco imobiliário helper"
version = "0.1.0"
description = ""
authors = ["cesardddp <cesardddp@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
