[tool.poetry]
name = "banco_imob"
version = "0.1.0"
description = "app auxiliar pra jogar super banco imobiliário"
authors = ["cesardddp <cesardddp@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pdbr = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
